--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <canvas></canvas>
   <button onclick="updateFrame(0)" >Stream</button>
   </div>
+  <div class="container-buttons">
   <button id="capture" ondblclick="">Capture 📸 </button>
+  <button id="swc">SC</button> </div>
   <div class="container-images">
     
   </div>
