--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name='theme-color' content='red'>
+  <meta name='theme-color' content='#2537FABA'>
   <title>camera - by yaver javid... </title>
   <!-- HTML -->
   <!-- Custom Styles -->
