--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name='theme-color' content='#2537FABA'>
+  <meta name='theme-color' content='#5b6bfb'>
   <title>camera - by yaver javid... </title>
   <!-- HTML -->
   <!-- Custom Styles -->
@@ -19,7 +19,7 @@
   <button onclick="updateFrame(0)" >Stream</button>
   </div>
   <div class="container-buttons">
-  <button id="capture" ondblclick="">Capture 📸 </button>
+  <button id="capture" ondblclick="">Capture </button>
   <button id="swc">SC</button> </div>
   <div class="container-images">
     
