--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <!-- HTML -->
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
-  
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
 </head>
 
 <body>
